CKAD-Certified-Kubernetes-Application-Developer/Lightning-Labs/Lab-2/my-busybox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod
  name: my-busybox
  namespace: dev2406
spec:
  containers:
  - image: busybox
    name: secret
    resources: {}
    command: ["sleep"]
    args: ["3600"]
    volumeMounts:
    - name: secret-volume
      mountPath: "/etc/secret-volume"
      readOnly: true
  volumes:
  - name: secret-volume
    secret:
      secretName: dotfile-secret
  tolerations:
  - key: "node-role.kubernetes.io/master"
    operator: "Exists"
    effect: "NoSchedule"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
